@@ -1,3 +1,11 @@
+2011-03-06  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/symbols.c:
+   When sorting tags by line, also sort by scope if line is the same, avoiding
+   wrong sorting if a parent tag is on the same line than its children, and one
+   of it's children would be sorted before alphabetically (closes #3193982).
+
+
 2011-03-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/interface.c, geany.glade:
